Refactored SCSS. Added Overflow-x Hidden to prevent Horizontal Scroll when Search appears when User signed in

--- a/app/assets/stylesheets/mixins.css.scss
+++ b/app/assets/stylesheets/mixins.css.scss
@@ -10,7 +10,8 @@ $break-large: 540px;
   @media screen and (max-width: $break-small) {
     width: 100px;
     text-align: left; 
-    font-size: 0.8em; // halve the font size on small screens
+    font-size: 0.7em; // halve the font size on small screens
+    //font-size: 90%;
     //float: none;
   }
 
